--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "KPM",
+  "name": "ripples",
   "dependencies": {
     "angular": "latest",
     "angular-animate": "latest",
@@ -7,7 +7,7 @@
     "angular-resource": "latest",
     "angular-touch": "latest",
     "angular-route": "latest",
-	"angular-sanitize": "latest",
+	  "angular-sanitize": "latest",
     "fontawesome": "latest",
     "jquery": "latest"
   }
