--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "gulp-strip-debug": "~0.3.0",
     "gulp-uglify": "~0.2.1",
     "gulp-util": "~2.2.14",
-    "mongoose": "~3.8.8",
-    "passport": "~0.2.0",
-    "passport-local": "^1.0.0"
+    "mongoose": "~3.8.8"
   }
 }
